docs/api/qiskit/0.39/qiskit.transpiler.passes.OptimizeCliffords.mdx
---
title: OptimizeCliffords (v0.39)
description: API reference for qiskit.transpiler.passes.OptimizeCliffords in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.OptimizeCliffords
---

# OptimizeCliffords

<Class id="qiskit.transpiler.passes.OptimizeCliffords" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/optimization/optimize_cliffords.py" signature="OptimizeCliffords(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Combine consecutive Cliffords over the same qubits. This serves as an example of extra capabilities enabled by storing Cliffords natively on the circuit.

  ## Methods

  <span id="qiskit-transpiler-passes-optimizecliffords-name" />

  ### name

  <Function id="qiskit.transpiler.passes.OptimizeCliffords.name" signature="OptimizeCliffords.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-optimizecliffords-run" />

  ### run

  <Function id="qiskit.transpiler.passes.OptimizeCliffords.run" signature="OptimizeCliffords.run(dag)">
    Run the OptimizeCliffords pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.OptimizeCliffords.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.OptimizeCliffords.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

